--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "portal-stack",
   "version": "0.1.0",
-  "description": "",
+  "description": "Portal stack with React context",
+  "repository": "https://github.com/avainola/portal-stack",
   "main": "index.js",
   "scripts": {
     "storybook": "start-storybook",
@@ -11,24 +12,24 @@
   "author": "Artur Vainola",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.4.0",
-    "@storybook/addon-info": "^5.1.1",
-    "@storybook/react": "^5.1.1",
-    "@types/jest": "^24.0.11",
-    "@types/react": "^16.8.10",
-    "@types/react-dom": "^16.8.3",
-    "@types/storybook__react": "^4.0.1",
+    "@babel/core": "^7.8.7",
+    "@storybook/addon-info": "^5.3.14",
+    "@storybook/react": "^5.3.14",
+    "@types/jest": "^25.1.4",
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "@types/storybook__react": "^5.2.1",
     "awesome-typescript-loader": "^5.2.1",
-    "babel-loader": "^8.0.5",
-    "jest": "^24.5.0",
-    "react-docgen-typescript-loader": "^3.0.1",
+    "babel-loader": "^8.0.6",
+    "jest": "^25.1.0",
+    "react-docgen-typescript-loader": "^3.7.1",
     "react-docgen-typescript-webpack-plugin": "^1.1.0",
-    "react-test-renderer": "^16.8.6",
-    "ts-jest": "^24.0.0",
-    "typescript": "^3.4.1"
+    "react-test-renderer": "^16.13.0",
+    "ts-jest": "^25.2.1",
+    "typescript": "^3.8.3"
   },
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0"
   }
 }
